Remove api key. Add xcode temporary file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 DateOnTheMoon/GooglePlacesAPI/GooglePlacesApi.plist
 # ignore xcode generated files
 .DS_Store
+*.pbxuser
+*.xcworkspace
+xcuserdata
+profile
